# drsm

./: .gitignore  Cargo.toml  README.md  devenv.nix
benches/: benchmark.rs  fib.rs  zero_sum.rs
src/: core.rs  error.rs  lib.rs  machine.rs  main.rs  token.rs  word.rs
