[package]
name = "drsm"
description = "Dylan's Rusty Stack Machine"
version = "0.11.1"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
documented = "0.9.2"
indexmap = "2.11.0"
lean_string = "0.5.1"
logos = "0.15.1"
rustyline = "17.0.1"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.12"

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
criterion = "0.7.0"
itertools = "0.14.0"
proptest = "1.7.0"

[lib]
bench = false

[[bin]]
name = "drsm"
path = "src/main.rs"
bench = false

[[bench]]
name = "fib"
harness = false

[[bench]]
name = "zero_sum"
harness = false
